		* Added translations update (Thanks to all translators)
		* Removed wxCas documentation to slim source tree (now downloadable from berlios)
		  
	Seagull:
		* Patch adding "Directory" column to the shared-files dialog.
		* Patch to add "Swap to this file" option for sources marked as 
		  "Asked For Another File" on download queue.
		  
	Xaignar:
		* Added sainity checks to category-loading, to avoid adding categories
		  without incomming dir or name.
		* Initial fix for crashes if aMule tried to share an inaccessible folder.
		* The redraw problems on restoring from minimized state should be fixed.
		* Fixed the shared-files list, which would draw columns regardless 
		  of whenever or not they were hidden.
		* Fixed the progress-bars in the shared-files dialog. It should now
		  work properly for both part and completed files.
		* Fixed a bug in the ipfilter, where non-numeric chars on lines would
		  cause wrong ranges of IPs to be filtered.
		* Re-added the priority menu for servers, which had gone missing due
		  to a mistake.
		* Stopped the client-credits class from attempting to load older 
		  versions of the lists, which again would lead to mem-corruption.
		* Fixed hidden columns on download queue, which would still be drawn.
		* Added sainity checks to loading of clients.met file, since corrupted 
		  files would lead to potentially huge ammounts of mem-corruption.
		* Added "Completed Sources" column to the shared-files dialog.
		* Fixed a bug in sockets where disconnected sockets wouldn't be removed
		  immediatly, but left to timeout instead.
		* Fixed an end-less loop on the AICH thread if a file on the queue
		  was removed from the list of shared files.
		* Fixed an end-less loop when changing file-status by category.
		* Fixed the auto-priority menu-item on the download list when multiple items
		  where selected. It would un-set auto-priotity instead.
		* A bit of optimization in CPartFile. More work will follow later.